更新版本号至 0.1.6.7，并在依赖中添加 mathml2omml

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ openpyxl
 python-docx
 beautifulsoup4
 lxml
+mathml2omml @ git+https://github.com/AlloteSoftware/mathml2omml_as.git
 
 pywin32 ; platform_system == "Windows"
 pync ; platform_system == "Darwin"
